# meta_puzzles

./: .gitignore  README.md
cpp17/: CMakeLists.txt  l0_abcs.cpp  l0_all_wrong.cpp  l0_battleship.cpp  l1_cafeteria.cpp  l1_director_photography1.cpp  l1_kaitenzushi.cpp  l1_rotary_lock1.cpp  l1_scoreboard_interference1.cpp  l1_stack_stabilization1.cpp  l1_uniform_integers.cpp  l2_director_photography2.cpp  l2_hops.cpp  l2_missing_mail.cpp  l2_portals.cpp  l2_rabbit_hole1.cpp  l2_rotary_lock2.cpp  l2_scoreboard_interference2.cpp  l2_tunnel_time.cpp  l3_boss_fight.cpp  l3_rabbit_hole2.cpp  l3_slippery_strip.cpp  l3_stack_stabilization2.cpp  l4_conveyor_chaos.cpp  l4_mathematical_art.cpp  meta_puzzles_cpp17.sln  meta_puzzles_cpp17.vcxproj  readme.txt  test_all.cpp  test_all.h
cs/: .gitignore  Program.cs  TestAll.cs  l0_abcs.cs  l0_all_wrong.cs  l0_battleship.cs  l1_cafeteria.cs  l1_director_photography1.cs  l1_kaitenzushi.cs  l1_rotary_lock1.cs  l1_scoreboard_interference1.cs  l1_stack_stabilization1.cs  l1_uniform_integers.cs  l2_director_photography2.cs  l2_hops.cs  l2_missing_mail.cs  l2_portals.cs  l2_rabbit_hole1.cs  l2_rotary_lock2.cs  l2_scoreboard_interference2.cs  l2_tunnel_time.cs  l3_boss_fight.cs  l3_rabbit_hole2.cs  l3_slippery_strip.cs  l3_stack_stabilization2.cs  l4_conveyor_chaos.cs  l4_mathematical_art.cs  meta_puzzles_cs.csproj  meta_puzzles_cs.sln
doc/: l3_boss_fight.html  l3_rabbit_hole2.html  l3_slippery_strip.html  l3_stack_stabilization2.html  l4_conveyor_chaos.html  l4_conveyor_chaos.md  l4_mathematical_art.html  l4_mathematical_art.md  readme.htm  readme.md
go/: main.go
js/: l0_abcs.js  l0_all_wrong.js  l0_battleship.js  l1_cafetaria.js  l1_director_photography1.js  l1_kaitenzushi.js  l1_rotary_lock1.js  l1_scoreboard_interference1.js  l1_stack_sabilization1.js  l1_uniform_integers.js  l2_director_photography2.js  l2_hops.js  l2_missing_mail.js  l2_portals.js  l2_rabbit_hole1.js  l2_rotary_lock2.js  l2_scoreboard_interference2.js  l2_tunnel_time.js  l3_boss_fight.js  l3_rabbit_hole2.js  l3_slippery_strip.js  l3_stack_stabilization2.js  test_all.js
kotlin/: Main.kt  l0_abcs.kt  l0_all_wrong.kt  l0_battleship.kt  l1_cafeteria.kt  l1_director_photography1.kt  l1_kaitenzushi.kt  l1_rotary_lock1.kt  l1_scoreboard_interference1.kt  l1_stack_stabilization1.kt  l1_uniform_integers.kt  l2_director_photography2.kt  l2_hops.kt  l2_missing_mail.kt  l2_portals.kt  l2_rabbit_hole1.kt  l2_rotary_lock2.kt  l2_scoreboard_interference2.kt  l2_tunnel_time.kt  l3_boss_fight.kt  l3_rabbit_hole2.kt  l3_slippery_strip.kt  l3_stack_stabilization2.kt  l4_conveyor_chaos.kt  l4_mathematical_art.kt  test_all.kt
original/: l3_rabbit_hole2.js  l3_rabbit_hole2.swift  l3_slippery_trip.swift
py3/: l0_abcs.py  l0_all_wrong.py  l0_battleship.py  l1_cafetaria.py  l1_director_photography1.py  l1_kaitenzushi.py  l1_rotary_lock1.py  l1_scoreboard_interference1.py  l1_stack_stabilization1.py  l1_uniform_integers.py  l2_director_photography2.py  l2_hops.py  l2_missing_mail.py  l2_portals.py  l2_rabbit_hole1.py  l2_rotary_lock2.py  l2_scoreboard_interference2.py  l2_tunnel_time.py  l3_boss_fight.py  l3_rabbit_hole2.py  l3_slippery_trip.py  l3_stack_stabilization2.py  l4_conveyor_chaos.py  l4_mathematical_art.py  test_all.py
rs/: Cargo.toml  l2_rabbit_hole1.rs
scala/: .gitignore  l0_abcs.scala  (+23 more)
(+74 files in other folders)
